us-service - continue implementing unit tests &  main project - first setup for readme